--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -80,6 +80,11 @@ jobs:
         mv build/gui/gui-armeabi-v7a/build/outputs/apk/release/gui-armeabi-v7a-release-signed.apk Grabber_nightly.apk
         ls -la *.apk
 
+    - name: Get date for Nightly body
+      id: date
+      if: ${{ github.event_name != 'pull_request' }}
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S %Z')"
+
     - name: Nightly
       uses: ncipollo/release-action@v1
       if: ${{ github.event_name != 'pull_request' }}
@@ -95,4 +100,5 @@ jobs:
           Nightly automated builds from the develop branch.
           Automatically uploaded by Github actions, **use at your own risk**!
 
-          **Head:** ${{ env.GITHUB_SHA }}
+          **Head:** ${{ github.sha }}
+          **Date:** ${{ steps.date.outputs.date }}
