--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -57,6 +57,11 @@ jobs:
         ./scripts/package-linux.sh
         mv Grabber.tar.gz Grabber_nightly.tar.gz
 
+    - name: Get date for Nightly body
+      id: date
+      if: ${{ github.event_name != 'pull_request' }}
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S %Z')"
+
     - name: Nightly
       uses: ncipollo/release-action@v1
       if: ${{ github.event_name != 'pull_request' }}
@@ -72,4 +77,5 @@ jobs:
           Nightly automated builds from the develop branch.
           Automatically uploaded by Github actions, **use at your own risk**!
 
-          **Head:** ${{ env.GITHUB_SHA }}
+          **Head:** ${{ github.sha }}
+          **Date:** ${{ steps.date.outputs.date }}
