Add AppData file for Linux installs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,7 +103,9 @@ add_subdirectory(languages)
 add_custom_target(translations DEPENDS General_translations CrashReporter_translations)
 install(DIRECTORY "dist/common" DESTINATION share/Grabber)
 install(DIRECTORY "sites" DESTINATION share/Grabber/sites)
-install(FILES "dist/linux/Grabber.desktop" DESTINATION share/applications)
+install(FILES "dist/linux/grabber.desktop" DESTINATION share/applications)
+install(FILES "dist/linux/grabber.png" DESTINATION share/icons/hicolor)
+install(FILES "dist/linux/grabber.appdata.xml" DESTINATION share/metainfo)
 
 add_subdirectory(sites)
 add_dependencies(gui sites)
