--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -185,7 +185,8 @@ jobs:
 
     - name: Package symbol files
       if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
-      run: 7z a "scripts\windows-setup\Grabber_%GRABBER_VERSION%_%PLATFORM_NAME%_symbols.zip" ".\build\gui\Grabber.pdb" ".\build\cli\Grabber-cli.pdb"
+      shell: cmd
+      run: 7z a "scripts\windows-setup\Grabber_%GRABBER_VERSION%_${{ matrix.platform }}_symbols.zip" ".\build\gui\Grabber.pdb" ".\build\cli\Grabber-cli.pdb"
 
     - name: Release
       uses: ncipollo/release-action@v1
