--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,7 @@ theme:
 lang: en_US
 relative_permalinks: false
 baseurl: /imgbrd-grabber
+excerpt_separator: <!--more-->
 
 exclude:
 - vendor/
@@ -28,9 +29,16 @@ collections:
   sources:
     permalink: "/docs/:collection/:path.html"
     output: true
+  posts:
+    permalink: "/blog/:year/:month/:day/:title.html"
+    output: true
+  category:
+    permalink: "/blog/:collection/:path.html"
+    output: true
 
 gems:
   - jemoji
+  - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
 
@@ -52,3 +60,13 @@ defaults:
       type: sources
     values:
       layout: sources
+  - scope:
+      path: _posts
+      type: post
+    values:
+      layout: blog_post
+  - scope:
+      path: _category
+      type: category
+    values:
+      layout: blog_category
