--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,9 @@ jobs:
         submodules: recursive
 
     - name: Install packages
-      run: sudo apt-get install libpulse-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install libpulse-dev
 
     - name: Cache Qt
       id: cache-qt
