--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,7 +31,9 @@ jobs:
         submodules: recursive
 
     - name: Install packages
-      run: sudo apt-get install libpulse-dev libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libgstreamer-plugins-base1.0-0
+      run: |
+        sudo apt-get update
+        sudo apt-get install libpulse-dev libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libgstreamer-plugins-base1.0-0
 
     - name: Cache Qt
       id: cache-qt
