Make cotire optional for building

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,7 +85,11 @@ else()
 	set(USE_PCH 0)
 endif()
 if(USE_PCH)
-	include(cotire/CMake/cotire)
+	include(cotire/CMake/cotire OPTIONAL RESULT_VARIABLE COTIRE_FILE_PATH)
+	if(NOT COTIRE_FILE_PATH)
+		message(WARNING "Cotire file not found, disabling PCH")
+		set(USE_PCH 0)
+	endif()
 endif()
 
 # Load Qt5Core here as it can only be included once (QTBUG-87863)
