--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -38,7 +38,7 @@
     },
     {
       "login": "BarryMode",
-      "name": "Barry Anders",
+      "name": "BarryMode",
       "avatar_url": "https://avatars1.githubusercontent.com/u/5648875?s=122",
       "profile": "https://github.com/BarryMode",
       "contributions": [
